fixed responsive of color picker dialog when on smallest device

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,7 @@ a:active {
   justify-content: center;
   align-items: center;
 }
+
+.MuiDialog-paperWidthSm{
+  margin: 0px !important;
+}
